# hpx_bfs_test

./: README.md
bfs_localities/: CMakeLists.txt  bfs_localities_client.cpp  bfs_localities_component.cpp  bfs_localities_component.hpp  graph.txt
bfs_simple/: CMakeLists.txt  Makefile  bfs_component.cpp  bfs_component.hpp  bfs_simple.sh  bfs_simple_client.cpp  bfs_simple_component.cpp  bfs_simple_component.hpp
bfs_single_locality/: .bfs_simple_client.cpp.swp  CMakeLists.txt  bfs_single_locality_client.cpp  bfs_single_locality_component.cpp  bfs_single_locality_component.hpp
bfs_standalone/: .Makefile.swp  Makefile  bfsc  bfsc.cpp  validate.cpp
